--- a/Air Conditioning Installations South Africa.html
+++ b/Air Conditioning Installations South Africa.html
@@ -84,7 +84,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<ul class="nav navbar-nav">
 							<li><a href="index.html" >Home</a></li>	
 							<li><a href="about.html">About Us</a></li>
-							<li><a href="Contacts.html">Office & Queries</a></li>						
+							<li><a href="Contacts.html">Office & Enqueries</a></li>						
 						
 							<!--SecondDropDown-->
 							<li class="dropdown">
