--- a/Contacts.html
+++ b/Contacts.html
@@ -51,7 +51,7 @@ Author URL: http://iWADCommunity.com
 			<li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:021 244 0411"> Tel (CPT): 021 244 0411</a></li>
 			<li class="number"><span class="fa fa-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:011 201 4830"> Tel (JHB): 011 201 4830</a></li>
 			<li class="number"><span class="fa fa-mobile-phone"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 734858583"> Cell: +27 734858583</a></li>
-			<li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electro-temp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electro-temp.co.za</a></li>
+			<li class="number"><span class="fa fa-envelope"></span><a href="mailto:info@electro-temp.co.za" style="text-decoration: none; color: whitesmoke;"> Email: info@electrotemp.co.za</a></li>
 			<li class="number"><span class="fa fa-whatsapp"></span><a style="text-decoration: none; color: whitesmoke;" href="tel:+27 64 828 2902"> Whatsapp: +27 64 828 2902</a></li>	</ul>
 		</div>
 	</div>
@@ -80,7 +80,7 @@ Author URL: http://iWADCommunity.com
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>	
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="Contacts.html" class="act">Office & Queries</a></li>						
+						<li><a href="Contacts.html" class="act">Office & Enqueries</a></li>						
 					
 						<!--SecondDropDown-->
 						<li class="dropdown">
