--- a/Midea Aircon Specials South Africa.html
+++ b/Midea Aircon Specials South Africa.html
@@ -81,7 +81,7 @@ Author URL: http://iWADCommunity.com
                         <ul class="nav navbar-nav">
                             <li><a href="index.html" >Home</a></li>	
                             <li><a href="about.html">About Us</a></li>
-                            <li><a href="Contacts.html">Office & Queries</a></li>						
+                            <li><a href="Contacts.html">Office & Enqueries</a></li>						
                         
                             <!--SecondDropDown-->
                             <li class="dropdown">
