--- a/Other  Aircon Specials South Africa .html
+++ b/Other  Aircon Specials South Africa .html
@@ -70,7 +70,7 @@
 						<ul class="nav navbar-nav">
 							<li><a href="index.html">Home</a></li>	
 							<li><a href="about.html">About Us</a></li>
-							<li><a href="Contacts.html">Office & Queries</a></li>						
+							<li><a href="Contacts.html">Office & Enqueries</a></li>						
 						
 							<!--SecondDropDown-->
 							<li class="dropdown">
