--- a/customers.html
+++ b/customers.html
@@ -72,7 +72,7 @@
 					<ul class="nav navbar-nav">
 						<li><a href="index.html">Home</a></li>	
 						<li><a href="about.html">About Us</a></li>
-						<li><a href="Contacts.html"  class="act">Office & Queries</a></li>						
+						<li><a href="Contacts.html"  class="act">Office & Enqueries</a></li>						
 					
 						<!--SecondDropDown-->
 						<li class="dropdown">
