--- a/about.html
+++ b/about.html
@@ -234,10 +234,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div class="col-md-3 w3_footer_grid">
 					<h3>Quick LInks</h3>
 					<ul class="info"> 
-						<li><a href="Air Conditioning Installations South Africa.html">Air Conditioning Installations</a></li>
-						<li><a href="Air Conditioning MaintenanceInstallations.html">Air Conditioning Maintenance</a></li>
-						<li><a href="Air Conditioning repairs South Africa.html">Air Conditioning repairs</a></li>
-						<li><a href="Air Conditioning Ventilation South Africa.html">Air Conditioning Ventilation</a></li>
+						<li><a href="Air Conditioning Installations South Africa.html">Installations</a></li>
+						<li><a href="Air Conditioning MaintenanceInstallations.html">Maintenance</a></li>
+						<li><a href="Air Conditioning repairs South Africa.html">Repairs</a></li>
+						<li><a href="Air Conditioning Ventilation South Africa.html">Ventilation</a></li>
 						
 					</ul>
 				</div>
