--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<h3>Our Services</h3>
 			<div id= "services">
-				<div class="item"><img src = "images/IMG-20200829-WA0002.jpg" width = "140" class="rounded" height="200"><p>Air-Conditioning supplies and  delivery</h3></div><br>
+				<div class="item"><img src = "images/image1.jpeg" width = "140" class="rounded" height="200"><p>Air-Conditioning supplies and  delivery</h3></div><br>
 				<div class="item"><img src = "images/technician-checking-ac-unit.jpg" width = "auto" class="rounded" height="200"><p>Installations</p></div><br>
 				<div class="item"><img src = "images/istockphoto-960461794-612x612.jpg" width = "auto" class="rounded" height="200"><p>Preventive Maintainance</p></div><br>
 				<div class="item"><img src = "images/troubleshoot-an-air-conditioner-mb.webp" width = "auto" class="rounded" height="200"><p>Repairs</p></div>
